--- a/index.html
+++ b/index.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Outfit:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="app.css">
+
   <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="outer">
+    <div class="container">
+      <div class="pbox">
+        <div class="pbox-inner">
+          <div class="pbox-inner1">
+            Get <span>insights</span> that help your business grow.
+          </div>
+          <div class="pbox-inner2">
+            Discover the benefits of data analytics and make better decisions regarding revenue, customer
+            experience, and overall efficiency.
+          </div>
+        </div>
+        <div class="pbox-3">
+          <div class="pbox3-1">
+            <p style="font-size: 1.3rem; font-weight: bold;">10k+</p>
+            <p style="color:hsla(0, 0%, 100%, 0.75); font-size: 0.9rem;">COMPANIES</p>
+          </div>
+          <div class="pbox3-2">
+            <p style="font-size: 1.3rem; font-weight: bold;">314</p>
+            <p style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.9rem;">TEMPLATES</p>
+          </div>
+          <div class="pbox3-3">
+            <p style="font-size: 1.3rem; font-weight: bold;">12m+</p>
+            <p style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.9rem;">QUERIES</p>
+          </div>
+        </div>
+      </div>
+      <div class="sbox">
+      </div>
+    </div>
   </div>
 </body>
+
 </html>
