updated alignment of stats div

--- a/index.html
+++ b/index.html
@@ -26,22 +26,28 @@
             Get <span>insights</span> that help your business grow.
           </div>
           <div class="pbox-inner2">
-            Discover the benefits of data analytics and make better decisions regarding revenue, customer
-            experience, and overall efficiency.
+            <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+              experience, and overall efficiency.</p>
           </div>
         </div>
         <div class="pbox-3">
           <div class="pbox3-1">
             <p style="font-size: 1.3rem; font-weight: bold;">10k+</p>
-            <p style="color:hsla(0, 0%, 100%, 0.75); font-size: 0.9rem;">COMPANIES</p>
+            <p
+              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.7rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
+              COMPANIES</p>
           </div>
           <div class="pbox3-2">
             <p style="font-size: 1.3rem; font-weight: bold;">314</p>
-            <p style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.9rem;">TEMPLATES</p>
+            <p
+              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.7rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
+              TEMPLATES</p>
           </div>
           <div class="pbox3-3">
-            <p style="font-size: 1.3rem; font-weight: bold;">12m+</p>
-            <p style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.9rem;">QUERIES</p>
+            <p style="font-size: 1.3rem; font-weight: bold;">12M+</p>
+            <p
+              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.7rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
+              QUERIES</p>
           </div>
         </div>
       </div>
