Added media queries

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         </div>
         <div class="pbox-3">
           <div class="pbox3-1">
-            <p style="font-size: 1.3rem; font-weight: bold;">10k+</p>
+            <p style="font-size: 1.2rem; font-weight: bold;margin-bottom: 5px;">10k+</p>
             <p
-              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.7rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
+              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.6rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
               COMPANIES</p>
           </div>
           <div class="pbox3-2">
-            <p style="font-size: 1.3rem; font-weight: bold;">314</p>
+            <p style="font-size: 1.2rem; font-weight: bold;margin-bottom: 5px;">314</p>
             <p
-              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.7rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
+              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.6rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
               TEMPLATES</p>
           </div>
           <div class="pbox3-3">
-            <p style="font-size: 1.3rem; font-weight: bold;">12M+</p>
+            <p style="font-size: 1.2rem; font-weight: bold;margin-bottom: 5px;">12M+</p>
             <p
-              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.7rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
+              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.6rem;letter-spacing: 1px; font-family: 'Lexend Deca', sans-serif;">
               QUERIES</p>
           </div>
         </div>
