--- a/index.html
+++ b/index.html
@@ -32,22 +32,16 @@
         </div>
         <div class="pbox-3">
           <div class="pbox3-1">
-            <p style="font-size: 1.2rem; font-weight: bold;margin-bottom: 5px;">10k+</p>
-            <p
-              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.6rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
-              COMPANIES</p>
+            <p class="statbig">10k+</p>
+            <p class="statsmall">COMPANIES</p>
           </div>
           <div class="pbox3-2">
-            <p style="font-size: 1.2rem; font-weight: bold;margin-bottom: 5px;">314</p>
-            <p
-              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.6rem;letter-spacing: 1px;font-family: 'Lexend Deca', sans-serif;">
-              TEMPLATES</p>
+            <p class="statbig">314</p>
+            <p class="statsmall">TEMPLATES</p>
           </div>
           <div class="pbox3-3">
-            <p style="font-size: 1.2rem; font-weight: bold;margin-bottom: 5px;">12M+</p>
-            <p
-              style="color:hsla(0, 0%, 100%, 0.75);font-size: 0.6rem;letter-spacing: 1px; font-family: 'Lexend Deca', sans-serif;">
-              QUERIES</p>
+            <p class="statbig">12M+</p>
+            <p class="statsmall">QUERIES</p>
           </div>
         </div>
       </div>
